2011-10-26 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Read .sat files only when there is data to compare.


2011-10-23 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map-groundtrack.c
    Use more robust check on orbit change time.

    * src/gtk-rig-ctrl.c
    * src/sat-debugger.c
    * src/sat-pref.c
    * src/sat-log-browser.c
    * src/mod-cfg.c
    * src/loc-tree.c
    Eliminate calls to deprecated gtk_box_pack_start_defaults.

    * src/mod-cfg-get-param.c
    * src/mod-cfg-get-param.h
    * src/gtk-sat-map.c
    * src/gtk-polar-view.c
    Migrate satellite map and polar view to single mod-cfg functions for getting lists of integers.

    * data/trsp/37839.trsp
    * data/trsp/5580.trsp
    Add transponder data for Prospero and SRMVU satellites.

    * src/gtk-sat-module.c
    Replace part of satellite update with call to predict_calc.


2011-10-13 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/qth-data.c
    * src/save-pass.c
    * src/gtk-polar-view-popup.c
    Eliminate unused variables to clean compiler output.

    * ChangeLog
    * src/sat-log-browser.c
    Add currently shown file name in title.

2011-10-12 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-list.c
    * src/gtk-sat-list.h
    Filter decayed satellites from satellite list. (Bug 3414666)

    * ChangeLog
    * src/gtk-event-list.c
    * src/gtk-event-list.h
    Filter decayed satellites from event list. (Bug 3414666)


2011-10-10 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-sat-module-popup.c
    * src/menubar.c
    * src/mod-mgr.c
    Add internationalization to several strings.

2011-10-09 Charles Suprin <hamaa1vs at gmail.com>

    * src/tle-update.c
    Eliminate compiler warning.

    * data/trsp/37772.trsp
    Add transponder file for ARISSAT/Radioskaf-b from Michael Schulz, K5TRI.


2011-10-08 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-sat-map-groundtrack.c